# duckdb-polyglot

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: MainDistributionPipeline.yml
src/: lib.rs
test/sql/: polyglot.test
