[package]
name = "polyglot"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "polyglot"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "=1.4.4", features = ["bundled", "loadable-extension", "vscalar", "vscalar-arrow"] }
libduckdb-sys = "=1.4.4"
polyglot-sql = "=0.1.1"
arrow = { version = "56", default-features = false }
serde_json = "1"
