[package]
name = "polyglot"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "polyglot"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.10501.0", features = ["bundled", "loadable-extension", "vscalar", "vscalar-arrow"] }
libduckdb-sys = "1.10501.0"
polyglot-sql = "0.3.0"
arrow = { version = "58", default-features = false }
serde_json = "1"
comfy-table = ">=7, <7.2"
